@@ -1,3 +1,10 @@
+Sat Jan 12 15:03:19 2008  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/eval.c: make internal function calling a bit faster.  Can be
+	  noticeable (tested 10% on fast operations)
+
+	* src/funclib.c: fix memory leak
+
 Thu Nov 29 10:34:41 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* help/C/gel-function-list.gel, lib/combinatorics/misc.gel:  Fix
